Changed URL to URI around VericleManager and friends