@@ -29,7 +29,7 @@ import org.vertx.java.core.logging.impl.LoggerFactory;
 import org.vertx.java.deploy.impl.VerticleManager;
 
 import java.lang.reflect.Method;
-import java.net.URL;
+import java.net.URI;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.*;
@@ -179,15 +179,15 @@ public class TestBase extends TestCase {
       log.error("*** The test framework requires at least 2 processors ***");
       fail("The test framework requires at least 2 processors");
     }
-    URL url;
+    URI url;
     if (main.endsWith(".js") || main.endsWith(".rb") || main.endsWith(".groovy") || main.endsWith(".py")) {
-      url = getClass().getClassLoader().getResource(main);
+      url = getClass().getClassLoader().getResource(main).toURI();
     } else {
       String classDir = main.replace('.', '/') + ".class";
-      url = getClass().getClassLoader().getResource(classDir);
+      url = getClass().getClassLoader().getResource(classDir).toURI();
       String surl = url.toString();
       String surlroot = surl.substring(0, surl.length() - classDir.length());
-      url = new URL(surlroot);
+      url = new URI(surlroot);
     }
 
     if (url == null) {
@@ -205,7 +205,7 @@ public class TestBase extends TestCase {
       }
     };
 
-    verticleManager.deployVerticle(worker, main, config, new URL[]{url}, instances, null, null, doneHandler);
+    verticleManager.deployVerticle(worker, main, config, new URI[]{url}, instances, null, null, doneHandler);
 
     if (!doneLatch.await(30, TimeUnit.SECONDS)) {
       throw new IllegalStateException("Timedout waiting for apps to start");
